2003-03-26  John Harper  <jsh@unfactored.org>

	* sawfish/wm/workspace.jl (select-workspace*): don't forget to
	show sticky windows when coming out of "show desktop" mode

2003-03-25  John Harper  <jsh@unfactored.org>

	* version 1.3

2003-03-16  John Harper  <jsh@unfactored.org>

	* sawfish/wm/workspace.jl (show-desktop, hide-desktop,
	showing-desktop-p): implement the "showing desktop" mode

	* sawfish/wm/state/wm-spec.jl: implement _NET_SHOWING_DESKTOP
	property

2003-02-24  John Harper  <jsh@unfactored.org>

	* sawfish/wm/state/wm-spec.jl (init): set WM_NAME as
	UTF8_STRING property, not STRING. Patch from Christian Krause
	<chkr@plauener.de>

2003-02-19  John Harper  <jsh@unfactored.org>

	Added support for task-list-skip property. Adapted from a patch
	sent to sawfish mailing list originally by Chris Boyle:

	* sawfish/wm/state/wm-spec.jl: support SKIP_TASKBAR state

	* sawfish/wm/state/ignored.jl (toggle-task-list-skip): new
	function and command

	* sawfish/wm/state/gnome.jl: support task-list-skip property
	instead of ad hoc hint setting

	* sawfish/wm/ext/match-window.jl: added task-list-skip property

2003-02-06  John Harper  <jsh@unfactored.org>

	* sawfish/wm/commands/gnome.jl (gnome-logout): save-session got
	renamed to gnome-session-save in gnome 2

2003-02-03  John Harper  <jsh@unfactored.org>

	* sawfish/wm/gnome/menus.jl (gnome-share-directory): if the
	method of finding the gnome share directory fails, default to
	/usr/gnome

2003-01-26  John Harper  <jsh@unfactored.org>

	* sawfish/wm/ext/window-history.jl (window-history-key):
	changed formatting so that some compatibility is kept with old
	keys (except for transient windows)

2003-01-15  John Harper  <jsh@unfactored.org>

	* sawfish/wm/ext/workspace-grid.jl (num-workspace-rows):
	removed libwnck workaround at request of Michael Toomin

2003-01-14  John Harper  <jsh@unfactored.org>

	* sawfish/wm/ext/window-history.jl (window-history-key,